--- a/케라스 합성곱신경망 알아보기.ipynb
+++ b/케라스 합성곱신경망 알아보기.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "keras.layers.convolutional.Conv2D"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "keras.layers.pooling.MaxPooling2D"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,20 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(layers.MaxPooling2D((2,2)))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(layers.Conv2D(32, (3,3), activation='relu'))"
+    "model.add(layers.MaxPooling2D((2,2)))"
    ]
   },
   {
@@ -152,12 +143,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(layers.MaxPooling2D((2,2)))"
+    "model.add(layers.Conv2D(32, (3,3), activation='relu'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.add(layers.MaxPooling2D((2,2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,11 +285,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_images.__class__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000,)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_labels.shape"
    ]
   },
   {
@@ -301,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +359,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +388,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,11 +415,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_labels = to_categorical(test_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000, 10)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_labels.shape"
    ]
   },
   {
@@ -391,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -408,24 +468,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "60000/60000 [==============================] - 17s 286us/step - loss: 0.2124 - accuracy: 0.9338\n",
+      "60000/60000 [==============================] - 20s 330us/step - loss: 0.2171 - accuracy: 0.9327\n",
       "Epoch 2/5\n",
-      "60000/60000 [==============================] - 17s 281us/step - loss: 0.0606 - accuracy: 0.9810\n",
+      "60000/60000 [==============================] - 19s 322us/step - loss: 0.0616 - accuracy: 0.9805\n",
       "Epoch 3/5\n",
-      "60000/60000 [==============================] - 17s 288us/step - loss: 0.0425 - accuracy: 0.9866\n",
+      "60000/60000 [==============================] - 20s 329us/step - loss: 0.0428 - accuracy: 0.9868\n",
       "Epoch 4/5\n",
-      "60000/60000 [==============================] - 18s 294us/step - loss: 0.0330 - accuracy: 0.9899\n",
+      "60000/60000 [==============================] - 20s 330us/step - loss: 0.0338 - accuracy: 0.9896\n",
       "Epoch 5/5\n",
-      "60000/60000 [==============================] - 18s 296us/step - loss: 0.0274 - accuracy: 0.9913\n"
+      "60000/60000 [==============================] - 20s 330us/step - loss: 0.0284 - accuracy: 0.9912\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.callbacks.History at 0x652536d90>"
+       "<keras.callbacks.callbacks.History at 0x630220350>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,23 +503,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 1s 89us/step\n"
+      "10000/10000 [==============================] - 1s 60us/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.03355327036160743, 0.9887999892234802]"
+       "[0.04382744855013152, 0.9873999953269958]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
