--- a/케라스 싱글레이어알아보기.ipynb
+++ b/케라스 싱글레이어알아보기.ipynb
@@ -433,13 +433,7 @@
       "60000/60000 [==============================] - 0s 7us/step - loss: 0.2762 - accuracy: 0.9233\n",
       "Epoch 153/200\n",
       "60000/60000 [==============================] - 0s 7us/step - loss: 0.2761 - accuracy: 0.9230\n",
-      "Epoch 154/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 154/200\n",
       "60000/60000 [==============================] - 0s 7us/step - loss: 0.2759 - accuracy: 0.9233\n",
       "Epoch 155/200\n",
       "60000/60000 [==============================] - 0s 7us/step - loss: 0.2757 - accuracy: 0.9233\n",
@@ -600,9 +594,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorcpu",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorcpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
