--- a/케라스_시퀀스 모델 만들기.ipynb
+++ b/케라스_시퀀스 모델 만들기.ipynb
@@ -343,9 +343,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorcpu",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorcpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
