--- a/케라스 _시퀀스모델과 함수모델 알아보기.ipynb
+++ b/케라스 _시퀀스모델과 함수모델 알아보기.ipynb
@@ -833,6 +833,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_11\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_17 (InputLayer)           (None, 7, 6)         0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_39 (Dense)                (None, 7, 64)        448         input_17[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_40 (Dense)                (None, 7, 64)        4160        dense_39[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_41 (Dense)                (None, 7, 1)         65          dense_40[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_42 (Dense)                (None, 7, 1)         65          dense_40[0][0]                   \n",
+      "==================================================================================================\n",
+      "Total params: 4,738\n",
+      "Trainable params: 4,738\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputs = Input(shape=(7,6)) # 7 steps ahead and 6 variables\n",
+    "\n",
+    "m = Dense(64,activation='relu')(inputs)\n",
+    "m = Dense(64,activation='relu')(m)\n",
+    "\n",
+    "# 아웃 게층 분리\n",
+    "outputA = Dense(1,activation='tanh')(m)\n",
+    "outputB = Dense(1,activation='tanh')(m)\n",
+    " \n",
+    "model = Model(inputs=[inputs], outputs=[outputA, outputB])\n",
+    "\n",
+    "\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
