--- a/tf_keras _시퀀스와 함수 API로 모델로 다양한 레이어 계층 만들기.ipynb
+++ b/tf_keras _시퀀스와 함수 API로 모델로 다양한 레이어 계층 만들기.ipynb
@@ -475,7 +475,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multiple Input Model\n",
+    "# 6. Multiple  Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 멀티 인풋 모델\n",
     "\n",
     "두 개의 입력계층을 별도로 처리한 후에 이를 병합해서 하나의 결과로 처리한다"
    ]
