--- a/텐서와 연산 알아보기.ipynb
+++ b/텐서와 연산 알아보기.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 참조자료\n",
+    "\n",
+    "https://www.tensorflow.org/tutorials/customization/basics?hl=ko"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
