--- a/레이어와 모델 내부 알아보기.ipynb
+++ b/레이어와 모델 내부 알아보기.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "TensorShape([5, 10])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "TensorShape([10])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1161,6 +1161,9 @@
      "text": [
       " __call__\n",
       " build once\n",
+      "WARNING:tensorflow:From <ipython-input-12-a49fae0632b7>:11: Layer.add_variable (from tensorflow.python.keras.engine.base_layer) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use `layer.add_weight` method instead.\n",
       " call \n",
       "tf.Tensor(\n",
       "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
@@ -1182,24 +1185,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<tf.Variable 'my_dense_layer_8/kernel:0' shape=(5, 10) dtype=float32, numpy=\n",
-      "array([[-0.56349903, -0.6295815 , -0.26796213,  0.24331576, -0.15170714,\n",
-      "         0.47815365, -0.4680872 , -0.49194705, -0.45403925,  0.42496938],\n",
-      "       [ 0.35457253, -0.13768423, -0.5128746 ,  0.37116796, -0.17485917,\n",
-      "         0.03124821,  0.02335048,  0.09440064, -0.60234004, -0.52183586],\n",
-      "       [ 0.20138341, -0.0850116 ,  0.4086905 , -0.5027043 ,  0.24358028,\n",
-      "        -0.10032755,  0.16450477,  0.28900957,  0.31089044,  0.31960875],\n",
-      "       [ 0.15255189, -0.36517587, -0.2618143 , -0.417182  , -0.4160333 ,\n",
-      "         0.12921965,  0.24934947,  0.39946848,  0.10251296, -0.5881783 ],\n",
-      "       [-0.0711295 , -0.07556224, -0.5858517 ,  0.6018384 ,  0.18092465,\n",
-      "        -0.26799935, -0.27413905,  0.08680463,  0.63019985, -0.05902553]],\n",
+      "[<tf.Variable 'my_dense_layer/kernel:0' shape=(5, 10) dtype=float32, numpy=\n",
+      "array([[-0.1336188 , -0.17973721,  0.0457387 , -0.04778916, -0.11442018,\n",
+      "         0.27634388,  0.0233438 , -0.3605604 , -0.34608147,  0.20435506],\n",
+      "       [ 0.53911453, -0.34215686, -0.0055365 , -0.605517  , -0.1873878 ,\n",
+      "         0.45381778,  0.09408009, -0.17390874, -0.4215914 ,  0.25666666],\n",
+      "       [-0.05356091, -0.2760215 ,  0.16786784,  0.21118021,  0.26238412,\n",
+      "         0.3229065 , -0.12998599,  0.13953787,  0.359532  ,  0.25377226],\n",
+      "       [-0.5885587 ,  0.4719141 ,  0.44792145,  0.08917654, -0.60364455,\n",
+      "        -0.13412514, -0.4745487 ,  0.0325644 , -0.20035127,  0.35161   ],\n",
+      "       [-0.31554815,  0.54240304,  0.25937223,  0.40635914,  0.23181874,\n",
+      "        -0.49638626,  0.34307122,  0.19238013, -0.32875502,  0.1050756 ]],\n",
       "      dtype=float32)>]\n"
      ]
     }
@@ -1224,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1262,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1271,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1371,28 +1374,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_9 (Conv2D)            (None, None, None, 1)     4         \n",
+      "conv2d_3 (Conv2D)            (None, None, None, 1)     4         \n",
       "_________________________________________________________________\n",
-      "batch_normalization_9 (Batch (None, None, None, 1)     4         \n",
+      "batch_normalization_3 (Batch (None, None, None, 1)     4         \n",
       "_________________________________________________________________\n",
-      "conv2d_10 (Conv2D)           (None, None, None, 2)     4         \n",
+      "conv2d_4 (Conv2D)            (None, None, None, 2)     4         \n",
       "_________________________________________________________________\n",
-      "batch_normalization_10 (Batc (None, None, None, 2)     8         \n",
+      "batch_normalization_4 (Batch (None, None, None, 2)     8         \n",
       "_________________________________________________________________\n",
-      "conv2d_11 (Conv2D)           (None, None, None, 3)     9         \n",
+      "conv2d_5 (Conv2D)            (None, None, None, 3)     9         \n",
       "_________________________________________________________________\n",
-      "batch_normalization_11 (Batc (None, None, None, 3)     12        \n",
+      "batch_normalization_5 (Batch (None, None, None, 3)     12        \n",
       "=================================================================\n",
       "Total params: 41\n",
       "Trainable params: 29\n",
@@ -1407,13 +1410,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: id=1841, shape=(1, 2, 3, 3), dtype=float32, numpy=\n",
+       "<tf.Tensor: id=738, shape=(1, 2, 3, 3), dtype=float32, numpy=\n",
        "array([[[[0., 0., 0.],\n",
        "         [0., 0., 0.],\n",
        "         [0., 0., 0.]],\n",
@@ -1423,7 +1426,7 @@
        "         [0., 0., 0.]]]], dtype=float32)>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
