--- a/텐서플로우2_function 테콜레이터.ipynb
+++ b/텐서플로우2_function 테콜레이터.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import tensorflow as tf"
+    "## 참조자료\n",
+    "\n",
+    "https://www.tensorflow.org/guide/function?hl=ko"
    ]
   },
   {
@@ -15,6 +15,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
   },
   {
    "cell_type": "markdown",
