--- a/tf_keras_functional 모델만들기_mnist.ipynb
+++ b/tf_keras_functional 모델만들기_mnist.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 희소행렬로 처리하기"
+    "## 손실함수를 희소행렬로 처리하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensorflow.python.keras.losses.CategoricalCrossentropy"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keras.losses.CategoricalCrossentropy"
    ]
   },
   {
@@ -409,9 +429,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorcpu",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorcpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
