--- a/tf_keras _시퀀스와 함수 API로 모델 만들어보기 .ipynb
+++ b/tf_keras _시퀀스와 함수 API로 모델 만들어보기 .ipynb
@@ -42,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "<module 'keras.models' from 'C:\\\\Users\\\\dahlmoon\\\\Anaconda3\\\\envs\\\\tensorcpu\\\\lib\\\\site-packages\\\\keras\\\\models.py'>"
+       "<module 'keras.models' from '/Users/dahlmoon/anaconda3/lib/python3.7/site-packages/keras/models.py'>"
       ]
      },
      "execution_count": 2,
@@ -170,6 +170,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy as sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'scipy.sparse' from '/Users/dahlmoon/anaconda3/lib/python3.7/site-packages/scipy/sparse/__init__.py'>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp.sparse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -194,8 +237,8 @@
     {
      "data": {
       "text/plain": [
-       "[<keras.layers.core.Dense at 0x2cfd2f28588>,\n",
-       " <keras.layers.core.Dense at 0x2cfaf2b3a48>]"
+       "[<keras.layers.core.Dense at 0x63a8d2410>,\n",
+       " <keras.layers.core.Dense at 0x63a7787d0>]"
       ]
      },
      "execution_count": 9,
@@ -251,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,17 +305,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<keras.layers.core.Dense at 0x2cfd2f8fec8>,\n",
-       " <keras.layers.core.Dense at 0x2cfd2f8ffc8>]"
+       "[<keras.layers.core.Dense at 0x63c4d2350>,\n",
+       " <keras.layers.core.Dense at 0x63c4d2590>]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,20 +326,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_3 (Dense)              (None, 2)                 4         \n",
+      "dense_6 (Dense)              (None, 2)                 4         \n",
       "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 1)                 3         \n",
+      "dense_7 (Dense)              (None, 1)                 3         \n",
       "=================================================================\n",
       "Total params: 7\n",
       "Trainable params: 7\n",
@@ -311,10 +354,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Variable 'dense_6/kernel:0' shape=(1, 2) dtype=float32, numpy=array([[0.7991065 , 0.05547094]], dtype=float32)>,\n",
+       " <tf.Variable 'dense_6/bias:0' shape=(2,) dtype=float32, numpy=array([0., 0.], dtype=float32)>]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_.layers[0].weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Variable 'dense_7/kernel:0' shape=(2, 1) dtype=float32, numpy=\n",
+       " array([[ 0.85462487],\n",
+       "        [-0.55090886]], dtype=float32)>,\n",
+       " <tf.Variable 'dense_7/bias:0' shape=(1,) dtype=float32, numpy=array([0.], dtype=float32)>]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_.layers[1].weights"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -433,10 +513,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(model_.weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Variable 'dense_3/kernel:0' shape=(1, 2) dtype=float32, numpy=array([[ 0.7727703, -1.0448133]], dtype=float32)>,\n",
+       " <tf.Variable 'dense_3/bias:0' shape=(2,) dtype=float32, numpy=array([0., 0.], dtype=float32)>]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_.layers[0].weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Variable 'dense_3/kernel:0' shape=(1, 2) dtype=float32, numpy=array([[ 0.7727703, -1.0448133]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_.layers[0].kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Variable 'dense_3/bias:0' shape=(2,) dtype=float32, numpy=array([0., 0.], dtype=float32)>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_.layers[0].bias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Variable 'dense_4/kernel:0' shape=(2, 1) dtype=float32, numpy=\n",
+       " array([[ 0.41151166],\n",
+       "        [-0.8953926 ]], dtype=float32)>,\n",
+       " <tf.Variable 'dense_4/bias:0' shape=(1,) dtype=float32, numpy=array([0.], dtype=float32)>]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_.layers[1].weights"
+   ]
   },
   {
    "cell_type": "code",
@@ -448,9 +625,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorcpu",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorcpu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
